--- a/1-5確認問題.css
+++ b/1-5確認問題.css
@@ -4,8 +4,18 @@
 	box-sizing: border-box;
 }
 
-.clearfix::after {
-	content:"";
-	display: block;
-	clear: both;
+header {
+	width: 10%;
+}
+
+.headline {
+	font-size: 22px;
+}
+
+.nav {
+	text-align: center;
+}
+
+.list {
+	padding-left: 40px;
 }
